# data-forge

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .secrets.baseline  .sqlfluff  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py
app/catalog/: download_catalog.py
app/core/: config.py
app/schemas/: download.py  ingestion.py  quality.py  transformation.py
app/services/: downloader.py  http_client.py  ingestion.py  quality.py  transformation.py
camel/: README.md
camel/routes/: file_to_fastapi.camel.yaml
dags/: ingestion_lab.py
data/: camel_message.txt  sample.txt  sample.xlsx
dbt/: dbt_project.yml
dbt/models/: sources.yml
dbt/models/marts/: dim_api_users.sql  fct_ingestion_summary.sql  fct_orders.sql  schema.yml
dbt/models/staging/: schema.yml  stg_orders.sql  (+4 more)
dbt/profiles/: profiles.yml
docker/airflow/: Dockerfile
flyway/: README.md
flyway/conf/: flyway.toml
flyway/sql/: V1__bootstrap_platform_schemas.sql  V2__create_control_tables.sql
governance/openmetadata/: README.md
pgadmin/: servers.json
pipelines/: common.py  runners.py
pipelines/sources/: api_source.py  excel_source.py  sql_source.py  txt_source.py
quality/soda/: README.md  configuration.yml
scripts/: bootstrap_openmetadata.sh  bootstrap_source_db.py  run_all.py  run_dbt.py  run_soda.py
sql/queries/: check_loaded_tables.sql
tests/: test_health.py  test_quality.py
(+3 files in other folders)
