[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "data-forge"
version = "0.1.0"
description = "Bac à sable FastAPI + dlt + PostgreSQL + Camel + Airflow"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Jean Dupont / ABCD" }]
dependencies = [
  "fastapi>=0.135.1,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.8,<3.0",
  "requests>=2.32,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "pandas>=2.2,<3.0",
  "openpyxl>=3.1,<4.0",
  "psycopg2-binary>=2.9,<3.0",
  "dlt[postgres,sql_database]>=1.23,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "httpx>=0.28,<1.0",
  "pre-commit>=4.1,<5.0",
  "ruff>=0.11,<1.0",
  "sqlfluff>=4.0.4,<5.0",
  "mdformat>=0.7.22,<1.0",
  "mypy>=1.15,<2.0",
]

[project.scripts]
bootstrap-source-db = "scripts.bootstrap_source_db:main"
ingest-all = "scripts.run_all:main"

[tool.hatch.build.targets.wheel]
packages = ["app", "pipelines", "scripts"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["governance"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
pretty = true
